수정관련 소스 수정

--- a/src/main/webapp/example3.html
+++ b/src/main/webapp/example3.html
@@ -204,7 +204,7 @@
     </div>
     <script type="text/javascript">
     	var data = [
-    		{no : 1, name : 'test1', pwd : 'pwd1', tell : '010-1234-5671', message : 'message1', regDate : '2019-04-05'},
+    		{no : 1, name : 'test1', pwd : 'pwd1', tell : '010-1234-5671', message : 'message1', regDate : new Date()},
     		{no : 2, name : 'test2', pwd : 'pwd2', tell : '010-1234-5672', message : 'message2', regDate : '2019-05-16'},
     		{no : 3, name : 'test3', pwd : 'pwd3', tell : '010-1234-5673', message : 'message3', regDate : '2019-06-05'},
     		{no : 4, name : 'test4', pwd : 'pwd4', tell : '010-1234-5674', message : 'message4', regDate : '2019-07-01'},
